--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -10,7 +10,7 @@
     </style>
 }
 
-<h1>歡迎成為會員</h1>
+<h1>成為會員</h1>
 
 
 <hr />
@@ -111,7 +111,7 @@
 
                         <button type="button" class="btn btn-success" id="sb1" onclick="BtnDemo()">Demo</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
-                        <input type="submit" onclick="CC()" class="btn btn-primary ccc">
+                        <input type="submit" class="btn btn-primary ccc">
                     </div>
 
 
