--- a/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
@@ -46,7 +46,7 @@
                                 <div class='activity-card-bottom'>
                                     <div>
                                         <div class='activity-card-price-box home-activity-card_price small-card'>
-                                            <span class='activity-card-price-box__sell-price dynamic-width-price'>NT${ab.Price}</span>
+                                            <span class='activity-card-price-box__sell-price dynamic-width-price'>NT${Convert.ToInt32(ab.Price)}</span>
                                             <div id='cancel'>
                                              <i id='heart{i}' onclick='love({i})' class='bi bi-heart'></i>
                                              
