--- a/MIST143_Traveler/Views/Home/Index.cshtml
+++ b/MIST143_Traveler/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                            name=""
                            id=""
                            placeholder="探索全球目的地/活動" />
-                    <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'">搜尋</button>                    
+                    <button type="button" onclick="location.href='@Url.Action("ProductListPage", "ProductListPage2")'">搜尋</button>                    
                     
                 </div>
             </form>
