--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
           crossorigin="anonymous" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    
+
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -110,16 +110,53 @@
     </header>
     <nav>
         <div class="secondary-nav">
-            <ul class="secondary-nav-container">
+            <ul class="secondary-nav-container drop-down-menu">
                 <li>
                     <a href="@Url.Content("~/ProductListPage/ProductListHomePage")"><i class="bi bi-geo-alt"></i>探索目的地</a>
                 </li>
                 <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">全部分類</a></li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">玩樂</a></li>
+                <li>
+                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">玩樂</a>  
+                    <ul>
+                        <li><a href="#">景點門票</a></li>
+                        <li><a href="#">行程</a></li>
+                        <li><a href="#">戶外&運動</a></li>
+                        <li><a href="#">水上活動</a></li>
+                        <li><a href="#">放鬆</a></li>
+                        <li><a href="#">娛樂&文化</a></li>
+                    </ul>
+                </li>
                 <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">美食品嘗</a></li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">住宿</a></li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">展演活動</a></li>
-                <li><a href="@Url.Content("~/TransportationPage/TransportationHomePage")">交通</a></li>
+                <li>
+                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">住宿</a>
+                    <ul>
+                        <li><a href="#">飯店</a></li>
+                        <li><a href="#">度假專案</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">展演活動</a>
+                    <ul>
+                        <li><a href="#">全台展演活動</a></li>
+                        <li><a href="#">台北展演活動</a></li>
+                        <li><a href="#">新北展演活動</a></li>
+                        <li><a href="#">台中展演活動</a></li>
+                        <li><a href="#">台南展演活動</a></li>
+                        <li><a href="#">高雄展演活動</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="@Url.Content("~/TransportationPage/TransportationHomePage")">交通</a>
+                    <ul>
+                        <li><a href="#">鐵路</a></li>
+                        <li><a href="#">日本鐵路</a></li>
+                        <li><a href="#">交通票券</a></li>
+                        <li><a href="#">巴士</a></li>
+                        <li><a href="#">私人機場接送</a></li>
+                        <li><a href="#">機場鐵路&巴士</a></li>
+                        <li><a href="#">渡輪</a></li>
+                    </ul>
+                </li>
                 <li><a href="@Url.Content("~/TransportationPage/TransportationHomePage")">租車&接送</a></li>
                 <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">探索更多玩法</a></li>
             </ul>
