--- a/MIST143_Traveler/wwwroot/css/ProductListPage.css
+++ b/MIST143_Traveler/wwwroot/css/ProductListPage.css
@@ -98,12 +98,12 @@ margin-top:3%;
 }
 
 .secondary-nav-container {
-    padding: 15px 0.8em;
+    padding: 10px 0.8em;
 }
 
     .secondary-nav-container li {
-        display: inline;
-        padding: 10px 0.8em;
+    /*    display: inline;*/
+        padding: 2px 0.8em;
         border-radius: 15px;
         font-size: 16px;
         color: rgb(16, 22, 22);
