--- a/MIST143_Traveler/wwwroot/css/travelIndex.css
+++ b/MIST143_Traveler/wwwroot/css/travelIndex.css
@@ -89,12 +89,12 @@
   margin: auto;
 }
 .secondary-nav-container {
-  padding: 15px 0.8em;
+  padding: 1px 0.8em;
 }
 .secondary-nav-container li {
-  display: inline;
+/*  display: inline;*/
   padding: 10px 0.8em;
-  border-radius: 15px;
+/*  border-radius: 15px;*/
   font-size: 16px;
   color: rgb(16, 22, 22);
 }
@@ -103,9 +103,9 @@
   text-decoration: none;
   color: black;
 }
-.secondary-nav-container li:hover {
+/*.secondary-nav-container li:hover {
   background-color: rgba(200, 198, 198, 0.571);
-}
+}*/
 /* header的css範圍 */
 
 /* footer的css範圍 */
@@ -134,7 +134,7 @@
 .default-footer_links ul,
 .default-footer_links li {
   margin: 0px;
-  padding: 10px 0 0 0;
+  padding: 10px ;
 }
 
 .footer_label {
@@ -477,3 +477,88 @@
   filter: grayscale(0%);
 }
 /* 合作夥伴區 */
+/*-----------------latout-----------------------*/
+ul {
+    /* 取消ul預設的內縮及樣式 */
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+    ul.drop-down-menu {
+       /* border: #ccc 1px solid;*/
+        display: inline-block;
+        font-family: 'Open Sans', Arial, sans-serif;
+        font-size: 13px;
+    }
+
+        ul.drop-down-menu li {
+            position: relative;
+            white-space: nowrap;
+            /*border-right: #ccc 1px solid;*/
+        }
+
+        ul.drop-down-menu > li:last-child {
+            border-right: none;
+        }
+
+        ul.drop-down-menu > li {
+            float: left;
+            /* 只有第一層是靠左對齊*/
+        }
+
+        ul.drop-down-menu a {
+            background-color: #fff;
+            color: #333;
+            display: block;
+            padding: 0 20px;
+            text-decoration: none;
+            line-height: 20px;
+        }
+
+            ul.drop-down-menu a:hover {
+                /* 滑鼠滑入按鈕變色*/
+                background-color: #ef5c28;
+                color: #fff;
+            }
+
+        ul.drop-down-menu li:hover > a {
+            /* 滑鼠移入次選單上層按鈕保持變色*/
+            background-color: #ef5c28;
+            color: #fff;
+        }
+
+        ul.drop-down-menu ul {
+         /*   border: #ccc 1px solid;*/
+            position: absolute;
+            z-index: 99;
+          /*  left: -1px;*/
+            top: 100%;
+         /*   min-width: 180px;*/
+        }
+
+            ul.drop-down-menu ul li {
+                border-bottom: #ccc 1px solid;
+            }
+
+                ul.drop-down-menu ul li:last-child {
+                    border-bottom: none;
+                }
+
+            ul.drop-down-menu ul ul {
+                /*第三層以後的選單出現位置與第二層不同*/
+                z-index: 999;
+                top: 10px;
+                left: 90%;
+            }
+
+        ul.drop-down-menu ul {
+            /*隱藏次選單*/
+            display: none;
+            background-color: white;
+        }
+
+        ul.drop-down-menu li:hover > ul {
+            /* 滑鼠滑入展開次選單*/
+            display: block;
+        }
