--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -28,18 +28,20 @@
             <div class="activity-page-container">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="幻燈片 1" src=" https://picsum.photos/400/300"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="幻燈片 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="幻燈片 3"></button>
+                        @for (int i = 0; i < Model.productpictures.Count; i++)
+                        {
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="@i" class="carouselExampleIndicators"  aria-current="true" aria-label="幻燈片 1"></button>
+                        }
+                        
+                      
                     </div>
 
                     <div class="carousel-inner 照片的包皮">
                         @foreach (var item in Model.productpictures)
                         {
-                            <div class="carousel-item active">
+                            <div class="carousel-item">
                                 <img src="https://localhost:44338/images/TravelProductPictures/@item.TravelPicture1" class="d-block carouselImg" alt="...">
                             </div>
-
                         }
 
                     </div>
@@ -199,11 +201,15 @@
                             <div class="col-4">
                                 <div class="leftSide grey p-3">
                                     <div class="titleFontStyle">行程明細</div>
-                                    <div class="hiddenInfoNote hiddenEle" >
-                                    @foreach (var item in Model.DailyDetailText)
-                                    {
-                                        @item
-                                    }
+                                    <div class="hiddenInfoNote hiddenEle">
+                                    <br />
+
+                                        @foreach (var item in Model.DailyDetailText)
+                                        {
+                                            <div class="mb-3">
+                                                @item
+                                            </div>
+                                        }
                                     </div>
                                     <div id="productInfoNote"></div>
                                 </div>
@@ -328,8 +334,11 @@
                 $('#totalPrice').text( @Model.Price)
                 //調整描述 換行 加圓點
                 let descritpionContent = $('#prodctDescriptionHidden').text()
-                if (descritpionContent[descritpionContent.length - 1] === '#') {
-                    descritpionContent = descritpionContent.slice(0, descritpionContent.length - 1)
+                let descritpionContentLength = descritpionContent.length
+                if (descritpionContent[descritpionContentLength - 1] === '#') {
+                    descritpionContent = descritpionContent.slice(0, descritpionContentLength - 1)
+                } else if (descritpionContent.slice(descritpionContentLength - 3, descritpionContentLength - 0) === '#\r\n') {
+                    descritpionContent = descritpionContent.slice(0, descritpionContentLength - 3)
                 }
                 descritpionContent = descritpionContent.replace(/#/g,"<br> ● ")
                 $('#prodctDescription').html(descritpionContent)
@@ -337,12 +346,18 @@
                 let preparationDescription = $('.hiddenPreparationDescription').text()
                 if (preparationDescription[preparationDescription.length - 1] === '#') {
                     preparationDescription = preparationDescription.slice(0, preparationDescription.length - 1)
+                } else if (preparationDescription.slice(preparationDescription.length - 3, preparationDescription.length - 0) === '#\r\n') {
+                    preparationDescription = preparationDescription.slice(0, preparationDescription.length - 3)
                 }
                 preparationDescription = preparationDescription.replace(/#/g, "<br> ● ")
-                $('.preparationDescription').html(descritpionContent)
-                let descritpionLabel = $(".hiddenInfoNote").text()
+                $('.preparationDescription').html(preparationDescription)
+
+                let descritpionLabel = $(".hiddenInfoNote").html()
                 descritpionLabel = descritpionLabel.replace(/#/g, "<br>")
                 $('#productInfoNote').html(descritpionLabel)
+                $('.carousel-item')[0].classList.add("active")
+                $('.carouselExampleIndicators')[0].classList.add("active")
+                
             }
             //點擊加號
             $('#productPlus').click(function () {
