--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -42,7 +42,7 @@
                                     <div class="destination-tips-popup-new">
                                         <div class="destination-tips-new">
                                             <span class="destination-tips_title">想尋找<span style="color:#FF5B00;font-weight:bold;">台灣</span>人氣玩樂？</span><div class="destination-tips_buttons">
-                                                <button data-v-0eaa3c40="" type="button" class="destination-tips_link klk-button klk-button-primary klk-button-mini">
+                                                <button data-v-0eaa3c40=""onclick="location.href='@Url.Action("ProductListPage", "ProductListPage2")'" type="button" class="destination-tips_link klk-button klk-button-primary klk-button-mini">
                                                     <!----> <!----> <span>
                                                         Go
                                                     </span>
