--- a/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
@@ -14,7 +14,7 @@
 <link href="~/css/客服中心訂單內容物.css" rel="stylesheet" />
 <div id="cont">
     <div class="row row-cols-1">
-        <div class="col 上面空間">
+        <div class="col 上面空間 mb-5">
             <h3>個人資訊</h3>
             <p>以下資訊僅用於幫助你在付款時自動填寫你的個人資料，你的資料將會安全地保存且不會公開</p>
         </div>
