--- a/MIST143_Traveler/Views/CustomerCenter/Myfavorites.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Myfavorites.cshtml
@@ -26,11 +26,11 @@
                                     <div class="找不到靈感">點擊活動頁面愛心圖示，收藏你的最愛吧！</div>
 
                                     <div class="按鈕間隔">
-                                        <button type="button" class="btn btn-warning 按鈕顏色">
+                                        <a href="@Url.ActionLink("ProductListPage","ProductListPage2")" type="button" class="btn btn-warning 按鈕顏色">
                                             <span>
                                                 去逛逛
                                             </span>
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
