--- a/MIST143_Traveler/Views/CustomerCenter/Review.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Review.cshtml
@@ -23,11 +23,11 @@
                     <div class="找不到靈感">留下評價，賺取 Star 積分，輕鬆折抵下次消費</div>
 
                     <div class="按鈕間隔">
-                        <button type="button" class="btn btn-warning 按鈕顏色">
+                        <a href="@Url.ActionLink("ProductListPage","ProductListPage2")" type="button" class="btn btn-warning 按鈕顏色">
                             <span>
                                 去逛逛
                             </span>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
