--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -84,7 +84,7 @@
                                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="越南" id="flexCheckDefault">
                                                     <label>越南</label>
                                                 </div>                                             
                                             </div>
@@ -329,7 +329,14 @@
                 $("#ans").load(url + day + nme);
 
             })*@
+              $("#flexCheckDefault").click(function () {
+                var ii = $("#flexCheckDefault").val();
+                var url = "@Url.Content("~/ProductListPage2/see")"
+                  var check = `?contry=${ii}`;
+                console.log(ii);
+                $("#ans").load(url + check);
 
+            })
 
 
             const sel = document.querySelector("#choise");
