--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -27,11 +27,11 @@
                 <div class="row">
                     <div class="col-12 col-md-3">
                   
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 18rem;border:0px;">
                             @{
                                 if (Model.PhotoPath != null)
                                 {
-                                    <label class="btn">
+                                    <label class="btn" >
                                         <input type="file" name="photo" class="form-control" onchange="uploadImg()" id="file" style="display:none" accept="image/*">
                                         <img src="~/Images/客戶大頭貼/@Model.PhotoPath" id="avatarShow" style="width:240px;height:240px;border-radius:50%" />
                                     </label>
