--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <a href="@Url.Content("~/Home/ContactCenter")">客服中心</a>
                 <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">最近逛過</a>
 
-                <a href="@Url.Content("~/Shopping/ShoppingCart")">購物車</a>
+                <a href="@Url.Content("~/Shopping/ShoppingCartSession")">購物車</a>
 
                 @{
                     if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
